--- a/app/src/main/res/layout/stories_fragment_layout.xml
+++ b/app/src/main/res/layout/stories_fragment_layout.xml
@@ -14,6 +14,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize"
+            android:layout_margin="@dimen/margin_20"
             android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:layout_collapseMode="pin" />
 
