--- a/app/src/main/res/layout/activity_popular.xml
+++ b/app/src/main/res/layout/activity_popular.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="mastersunny.unitedclub.Activity.PopularActivity">
+    tools:context="mastersunny.unitedclub.Activity.StoresActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
