--- a/app/src/main/res/layout/stores_activity_layout.xml
+++ b/app/src/main/res/layout/stores_activity_layout.xml
@@ -7,8 +7,7 @@
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true">
+        android:layout_height="wrap_content">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -21,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:padding="@dimen/margin_5"
             android:weightSum="2">
 
             <TextView
@@ -43,7 +43,6 @@
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_gravity="bottom"
             android:background="@color/white"
             android:scrollbars="horizontal"
             app:tabIndicatorColor="@color/colorPrimary"
