--- a/app/src/main/res/layout/popular_item_verical.xml
+++ b/app/src/main/res/layout/popular_item_verical.xml
@@ -19,7 +19,7 @@
 
 
         <TextView
-            android:id="@+id/company_name"
+            android:id="@+id/store_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
