--- a/app/src/main/res/layout/stores_activity_layout.xml
+++ b/app/src/main/res/layout/stores_activity_layout.xml
@@ -7,7 +7,8 @@
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -44,7 +45,6 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@color/white"
-            android:scrollbars="horizontal"
             app:tabIndicatorColor="@color/colorPrimary"
             app:tabIndicatorHeight="2dp"
             app:tabPaddingEnd="0dp"
