--- a/app/src/main/res/layout/store_offer_layout.xml
+++ b/app/src/main/res/layout/store_offer_layout.xml
@@ -26,7 +26,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
                 android:scaleType="fitXY"
-                android:src="@drawable/ic_launcher_background" />
+                android:src="@drawable/paytm" />
 
             <LinearLayout
                 android:id="@+id/item_tag"
@@ -59,19 +59,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/image_layout"
-            android:layout_marginTop="@dimen/margin_10"
+            android:layout_marginTop="@dimen/margin_20"
             android:ellipsize="end"
             android:maxLines="2"
-            android:text="flhdslifdslfhosdh"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/text_size_16" />
+            android:text="Makemytrip Offers On Flight Tickets $100 Off ON Domestic Flights"
+            android:textColor="@android:color/black" />
 
         <TextView
             android:id="@+id/offer_end_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:text="Ends On 31 Dec 2017" />
+            android:text="Ends On 31 Dec 2017"
+            android:textSize="@dimen/text_size_12" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
