--- a/app/src/main/res/layout/activity_stores_details.xml
+++ b/app/src/main/res/layout/activity_stores_details.xml
@@ -96,6 +96,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?android:attr/actionBarSize"
+                android:layout_marginTop="@dimen/margin_20"
                 android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 app:layout_collapseMode="pin">
 
