--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,10 @@
         android:layout_gravity="bottom"
         android:layout_marginEnd="0dp"
         android:layout_marginStart="0dp"
-        android:background="@color/white"
+        android:foreground="@drawable/bottom_navigation_foreground"
+        app:itemBackground="@color/white"
+        app:itemIconTint="@color/bottom_navigation_background"
+        app:itemTextColor="@color/bottom_navigation_background"
         app:menu="@menu/navigation" />
 
 </android.support.design.widget.CoordinatorLayout>
