--- a/app/src/main/res/layout/home_fragment_layout.xml
+++ b/app/src/main/res/layout/home_fragment_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
@@ -33,62 +34,33 @@
                         android:layout_width="match_parent"
                         android:layout_height="220dp" />
 
-                    <RelativeLayout
+                    <android.support.v7.widget.CardView
                         android:id="@+id/coupon_finder_layout"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="130dp"
                         android:layout_below="@+id/autoViewPager"
-                        android:padding="@dimen/margin_10">
+                        android:layout_margin="@dimen/margin_10"
+                        android:foreground="?selectableItemBackground"
+                        card_view:cardCornerRadius="@dimen/margin_2"
+                        card_view:cardElevation="@dimen/margin_2">
 
                         <ImageView
                             android:layout_width="match_parent"
-                            android:layout_height="120dp"
+                            android:layout_height="wrap_content"
                             android:scaleType="fitXY"
                             android:src="@drawable/coupon_finder_img" />
 
-                        <TextView
-                            android:id="@+id/coupon_finder_text"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/margin_10"
-                            android:layout_marginTop="@dimen/margin_30"
-                            android:text="Coupon Finder" />
-
-                        <TextView
-                            android:id="@+id/grab_coupon_for_recharge"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@+id/coupon_finder_text"
-                            android:layout_marginLeft="@dimen/margin_10"
-                            android:layout_marginTop="@dimen/margin_10"
-                            android:text="Coupon Finder" />
-
-                        <TextView
-                            android:id="@+id/message"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@+id/grab_coupon_for_recharge"
-                            android:layout_marginLeft="@dimen/margin_10"
-                            android:layout_marginTop="@dimen/margin_10"
-                            android:text="Coupon Finder" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentBottom="true"
-                            android:layout_alignParentRight="true"
-                            android:paddingBottom="@dimen/margin_5"
-                            android:paddingRight="@dimen/margin_5"
-                            android:text="COUPON FINDER"
-                            android:textSize="@dimen/text_size_12" />
-
-                    </RelativeLayout>
+                    </android.support.v7.widget.CardView>
 
                     <RelativeLayout
                         android:id="@+id/popular_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/coupon_finder_layout">
+                        android:layout_below="@+id/coupon_finder_layout"
+                        android:paddingBottom="@dimen/margin_5"
+                        android:paddingLeft="@dimen/margin_10"
+                        android:paddingRight="@dimen/margin_10"
+                        android:paddingTop="@dimen/margin_5">
 
                         <TextView
                             android:id="@+id/popular_stories"
@@ -96,7 +68,6 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentLeft="true"
                             android:elevation="@dimen/margin_5"
-                            android:padding="@dimen/margin_10"
                             android:text="Popular Stores"
                             android:textSize="@dimen/text_size_13" />
 
@@ -106,7 +77,6 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
                             android:elevation="@dimen/margin_5"
-                            android:padding="@dimen/margin_10"
                             android:text="View All"
                             android:textColor="#006ff1"
                             android:textSize="@dimen/text_size_13" />
