--- a/app/src/main/res/layout/home_fragment_layout.xml
+++ b/app/src/main/res/layout/home_fragment_layout.xml
@@ -67,12 +67,13 @@
                         android:paddingTop="@dimen/margin_5">
 
                         <TextView
-                            android:id="@+id/popular_stories"
+                            android:id="@+id/popular_stores"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentLeft="true"
                             android:elevation="@dimen/margin_5"
                             android:text="Popular Stores"
+                            android:textColor="#616161"
                             android:textSize="@dimen/text_size_13" />
 
                         <TextView
@@ -122,7 +123,8 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:gravity="left"
-                        android:text="Search..." />
+                        android:text="Search..."
+                        android:textColor="#a4a4a4" />
 
                     <ImageView
                         android:layout_width="wrap_content"
