--- a/app/src/main/res/layout/store_offer_layout.xml
+++ b/app/src/main/res/layout/store_offer_layout.xml
@@ -64,8 +64,7 @@
             android:lineSpacingExtra="@dimen/margin_4"
             android:maxLines="2"
             android:text="Makemytrip Offers On Flight Tickets $100 Off ON Domestic Flights"
-            android:textColor="@android:color/black"
-            android:textStyle="bold" />
+            android:textColor="#000000" />
 
         <TextView
             android:id="@+id/offer_end_date"
