--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,7 @@
     <color name="lbl_name">#333333</color>
     <color name="btn_logut_bg">#ff6861</color>
     <color name="grey">#e5e5e5</color>
+    <color name="grey_lite">#a4a4a4</color>
     <color name="item_details">#30404f</color>
     <color name="dark_grey">#888888</color>
 </resources>
