--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,8 +8,10 @@
     </style>
 
     <style name="MineCustomTabText" parent="TextAppearance.Design.Tab">
+        <item name="android:fontFamily">AVENIRLTSTD-MEDIUM</item>
         <item name="android:textSize">12sp</item>
         <item name="textAllCaps">false</item>
+        <item name="android:textColor">@color/grey_lite</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
