--- a/app/src/main/res/layout/stores_fragment_layout.xml
+++ b/app/src/main/res/layout/stores_fragment_layout.xml
@@ -51,7 +51,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="right"
-                android:text="10 Popular | " />
+                android:text="10 Popular | "
+                android:textColor="#616161" />
 
             <TextView
                 android:id="@+id/total_item"
@@ -59,7 +60,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="left"
-                android:text="1234 in Total" />
+                android:text="1234 in Total"
+                android:textColor="#616161" />
         </LinearLayout>
 
         <android.support.design.widget.TabLayout
