--- a/app/src/main/res/layout/activity_barcode_reader.xml
+++ b/app/src/main/res/layout/activity_barcode_reader.xml
@@ -9,6 +9,7 @@
     tools:context="mastersunny.unitedclub.Activity.BarcodeReaderActivity">
 
     <TextView
+        android:id="@+id/startReading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
